# codeSpine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gindex.py  gindex_v2.py  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
codespine/: __init__.py  cli.py  config.py
codespine/analysis/: __init__.py  community.py  context.py  coupling.py  crossmodule.py  deadcode.py  flow.py  impact.py
codespine/db/: schema.py  store.py
codespine/diff/: __init__.py  branch_diff.py
codespine/indexer/: __init__.py  call_resolver.py  engine.py  java_parser.py  symbol_builder.py
codespine/mcp/: __init__.py  server.py
codespine/noise/: __init__.py  blocklist.py
codespine/overlay/: __init__.py  git_state.py  merge.py  store.py
codespine/search/: __init__.py  bm25.py  fuzzy.py  hybrid.py  rrf.py  vector.py
codespine/watch/: __init__.py  watcher.py
docs/: GITHUB_HARDENING.md
tests/: conftest.py  test_branch_diff_normalize.py  test_call_resolver.py  test_community_detection.py  test_deadcode.py  test_index_and_hybrid.py  test_java_parser.py  test_multimodule_index.py  test_overlay.py  test_search_ranking.py  test_store_recovery.py
tests/fixtures/java_simple/src/main/java/com/example/: App.java  Service.java
tests/fixtures/java_simple/src/test/java/com/example/: ServiceTest.java
