[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codespine"
version = "0.5.6"
description = "Local Java code intelligence indexer backed by a graph database"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "CodeSpine contributors" }
]
keywords = ["java", "code-indexing", "graph", "kuzu", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "click",
  "kuzu",
  "tree-sitter",
  "tree-sitter-java",
  "fastmcp>=2.3.0",
  "psutil",
  "watchfiles"
]

[project.optional-dependencies]
ml = [
  "sentence-transformers",
  "numpy"
]
community = [
  "igraph",
  "leidenalg"
]
full = [
  "sentence-transformers",
  "numpy",
  "igraph",
  "leidenalg"
]

[project.urls]
Homepage = "https://github.com/vinayak3022/codeSpine"
Repository = "https://github.com/vinayak3022/codeSpine"
Issues = "https://github.com/vinayak3022/codeSpine/issues"

[project.scripts]
codespine = "codespine.cli:main"
gindex = "codespine.cli:main"

[tool.setuptools]
py-modules = ["gindex"]

[tool.setuptools.packages.find]
include = ["codespine*"]
